@@ -9,6 +9,8 @@ Change Log:
 - Fix php warnings when switching between non-calculated shipping modules
 - Fix bug with which gateway is shown when switching global cart in network settings
 - Fix possible rounding error in Stripe gateway
+- In Calculated Shipping plugins changed so if all weights in an order are zero then show Free Shipping
+- In FedEx fixed problem with calculating the correct number of packages.
 
 2.8.9 - 9/22/2013 - Aaron Edwards, Arnold, Marko Miljus
 ----------------------------------------------------------------------
